--- a/v2/index.html
+++ b/v2/index.html
@@ -204,7 +204,7 @@ for (let i = 0; i < numColumns; i++) {
             <h1>Peter Roper</h1>
         </a>
         <nav class="about links">
-            <a href="about.html" class="fade-link">About</a>
+            <a href="about/" class="fade-link">About</a>
             <a href="assets/resume/peterroper_resume20072023.pdf" target="_blank">Resume</a>
         </nav>
     </div></div>
@@ -217,7 +217,7 @@ for (let i = 0; i < numColumns; i++) {
       <div class="column">
         <h2>Pushing the needle while<br /> engaging my creative intuition.</h2>
         <p class="l b"><span>Hi I'm Peter, a Product Designer based in Tokyo.</span> As a Senior Designer at Asurion Japan, I lead the UX & UI design for clients au and docomo.</p>
-        <p>Read more about my <a href="about.html">background and experience</a> working as a Product Designer.</p>
+        <p>Read more about my <a href="about/">background and experience</a> working as a Product Designer.</p>
       </div>
       <div class="column">
         <span class="img bg-non" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/avatar3.png);" ></span>
@@ -226,72 +226,80 @@ for (let i = 0; i < numColumns; i++) {
     <div id="journal" class="section">
         <h4>Design Journal</h4>
         <div class="article-container">
-            <div class="article section">
+            <div class="article">
                 <h3 class="title">Continously Improving with A/B Testing and Product Analytics</h3>
-                <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in metus vel sapien feugiat sollicitudin. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in metus vel sapien feugiat sollicitudin.</p>
+                <p class="description">I'm passionate about improvement and took steps to align A/B Testing and analytics with an ongoing continous Improvement task.</p>
+                <p><a href="journal/ab-testing.html">Read the Journal</a></p>
                 <span class="img"></span>
                 <div class="meta">
                     <span class="tag">Journal</span>
                     <span class="date">September 25, 2023</span>
                 </div>
             </div>
-            <div class="article section">
+            <div class="article">
                 <h3 class="title">Optimizing the Initial Experience</h3>
                 <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in metus vel sapien feugiat sollicitudin. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in metus vel sapien feugiat sollicitudin.</p>
+                <p><a href="casestudies/initial-experience/">Read the Case Study</a></p>
                 <span class="img sm" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/showcase1.png);"></span>
                 <div class="meta">
                     <span class="tag">Case study</span>
                     <span class="date">September 25, 2023</span>
                 </div>
             </div>
-            <div class="article section">
+            <div class="article">
                 <h3 class="title">Working as a Designer & Front end Developer</h3>
                 <p class="description">From 2006 to 2016 I worked as both a designer and front end developer for a bookings organization.</p>
+                <p><a href="about/designer-developer.html">Read the Journal</a></p>
                 <span class="img"></span>
                 <div class="meta">
                     <span class="tag">About Me</span>
                     <span class="date">September 25, 2023</span>
                 </div>
             </div>
-            <div class="article section">
+            <div class="article">
                 <h3 class="title">How I advocated & defined Design principles for the Tsukasapo app</h3>
                 <p class="description">Design Principles are the building blocks of a design system which define its guidelines for all team members to follow.</p>
+                <p><a href="journal/design-principles.html">Read the Journal</a></p>
                 <span class="img"></span>
                 <div class="meta">
                     <span class="tag">Journal</span>
                     <span class="date">September 25, 2023</span>
                 </div>
             </div>
-            <div class="article section">
+            <div class="article">
                 <h3 class="title">Improving Adventure Cards Information Architecture</h3>
                 <p class="description">I revisited one of my former products to apply newly learnt UX skills and outline how I would resolve past challenges.</p>
+                <p><a href="casestudies/adventurecards/">Read the Case Study</a></p>
                 <span class="img sm" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/showcase2.png);"></span>
                 <div class="meta">
                     <span class="tag">Case study</span>
                     <span class="date">September 25, 2023</span>
                 </div>
             </div>
-            <div class="article section">
-                <h3 class="title">Automating a Userflow & UI Screen Repository</h3>
-                <p class="description">Growing up I was interested in visual design and had a skill for technical 3D drawing. In 1996 computer based design was limited so my focus was directed towards hand drawn architectural drawings and 3D models for industrial design school projects.</p>
+            <div class="article">
+                <h3 class="title">Understanding a product and User flows</h3>
+                <p class="description">A clear understanding of a product, it's flows, screens and details allows you to design and iterate more effectively.</p>
+                <p><a href="journal/userflow-repository.html">Read the Journal</a></p>
                 <span class="img"></span>
                 <div class="meta">
                     <span class="tag">About Me</span>
                     <span class="date">September 25, 2023</span>
                 </div>
             </div>
-            <div class="article section">
+            <div class="article">
                 <h3 class="title">Pulse Football a rapid ideation</h3>
                 <p class="description"></p>
+                <p><a href="casestudies/pulse-football/">Read the Case Study</a></p>
                 <span class="img sm" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/showcase3.png);"></span>
                 <div class="meta">
                     <span class="tag">Case study</span>
                     <span class="date">September 25, 2023</span>
                 </div>
             </div>
-            <div class="article section">
+            <div class="article">
                 <h3 class="title">Formative Years in Design</h3>
                 <p class="description">Growing up I was interested in visual design and had a skill for technical 3D drawing. This led me to study Product Design & Development at University.</p>
+                <p><a href="about/formative-design.html">Read the Journal</a></p>
                 <span class="img"></span>
                 <div class="meta">
                     <span class="tag">About Me</span>
@@ -301,7 +309,6 @@ for (let i = 0; i < numColumns; i++) {
         </div>
 
     </div>
-
 
     </div>
     <!-- body ENDS -->
