--- a/v2/journal/home-improvement-enthusiast.html
+++ b/v2/journal/home-improvement-enthusiast.html
@@ -214,8 +214,10 @@ for (let i = 0; i < numColumns; i++) {
     <div class="body">
     
         <div id="intro" class="section">
+            
             <div class="column-container col1">
                 <div class="column">
+                    <h2>Home Improvement Enthusiast</h2>
                     <p>Being creative and solving problems is part of my nature. My home is the perfect canvas for me to express my ideas and keep my mind engaged.</p>
                     <h3>An English country garden</h3>
                     <p>One of the great past times of the British is to garden and I am no different. I love landscape gardening and have spent many hours creating and refining my own green space in Chiba.</p>
