--- a/v2/about/index.html
+++ b/v2/about/index.html
@@ -31,130 +31,7 @@
 </script>
 <!--script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script-->
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-<script>
-/*document.addEventListener("DOMContentLoaded", function () {
-  const content = document.getElementById("fade-container");
-  const fadeLinks = document.querySelectorAll(".fade-link");
-
-  fadeLinks.forEach(function (link) {
-    link.addEventListener("click", function (event) {
-      event.preventDefault();
-
-      content.style.opacity = 0; // Start fading out
-
-      // Wait for the transition to complete before following the link
-      setTimeout(function () {
-        window.location.href = link.href;
-      }, 500); // Same duration as the transition in CSS
-    });
-  });
-});*/
- $(document).ready(function() {
-
-    $(".navi nav, .navi .back, #titlebar").css("display", "none"); // Ensure container is hidden initially
-    $(window).on("load", function() { 
-    setTimeout(function() {
-        $(".fullscreen-div").addClass("loaded");
-    }, 400);
-    setTimeout(function() {
-        $(".navi nav, .navi .back").fadeIn(800);
-        $(".fullscreen-div").addClass("none"); 
-    }, 1400);
-    setTimeout(function() {
-        $("#titlebar").fadeIn(800); 
-    }, 2000);
-    });
-
-
-  var stickyElement = $('.sticky-element');
-  var initialOffset = stickyElement.offset().top;
-  if (initialOffset === 0) {
-    // Update the initial offset to 120
-    initialOffset = 120;
-}
-
-  $(window).on('scroll', function() {
-    var scrollPosition = $(window).scrollTop();
-    
-    if (scrollPosition >= initialOffset) {
-      stickyElement.addClass('sticky');
-    } else {
-      stickyElement.removeClass('sticky');
-    }
-  });
-
-  /* NAVI *////////////////////////////////////////////
-const navs = $('.navi nav');
-  const navLinks = $('.navi a');
-  const sections = $('.section');
-  const segments = $('.segment');
-  const offsetValue = 50; // Adjust this value as needed
-
-  $(window).scroll(function() {
-    const scrollTop = $(window).scrollTop();
-
-    sections.each(function() {
-      var sectionTop = $(this).offset().top;
-
-      if (scrollTop >= sectionTop - offsetValue) {
-        var sectionId = $(this).attr('id');
-
-       /* if (!navLinks.filter('[href="#' + sectionId + '"]').hasClass('selected')) {
-          navLinks.removeClass('selected');
-          navLinks.filter('[href="#' + sectionId + '"]').addClass('selected');
-        }*/
-
-        if (!navLinks.filter('[href="#' + sectionId + '"]').parent().hasClass('selected')) {
-          navs.removeClass('selected');
-          navLinks.filter('[href="#' + sectionId + '"]').parent().addClass('selected');
-        }
-      }
-    });
-
-    /*segments.each(function() {
-      var segmentTop = $(this).offset().top;
-
-      if (segmentTop >= 0 && scrollTop >= segmentTop - offsetValue) {
-        var segmentId = $(this).attr('id');
-
-        if (!navLinks.filter('[href="#' + segmentId + '"]').hasClass('selected')) {
-          navLinks.removeClass('selected');
-          navLinks.filter('[href="#' + segmentId + '"]').addClass('selected');
-        }
-
-        if (!navLinks.filter('[href="#' + segmentId + '"]').parent().hasClass('selected')) {
-          navs.removeClass('selected');
-          navLinks.filter('[href="#' + segmentId + '"]').parent().addClass('selected');
-        }
-      }
-    });*/
-  });
-
-  navLinks.click(function(e) {
-    e.preventDefault();
-    const targetId = $(this).attr('href').slice(1);
-    const targetElement = $('#' + targetId);
-    if (targetElement.length) {
-      $('html, body').animate({
-        scrollTop: targetElement.offset().top
-      }, 500);
-    }
-  });
-
-  $( ".tab-menu a").on( "click", function() {
-    var id = $(this).attr('href');
-    var parent = $(this).parents('.tab-block').attr('id');
-    $("#"+parent+" .tab-menu a").removeClass('selected');
-    $(this).addClass('selected');
-    $("#"+parent+" .tab-container").removeClass('tab-selected');
-    $("#"+parent+" "+id+"").addClass('tab-selected');
-    return false;
-});
-
-
-
-});
-</script>
+<script src="../js/core.js"></script>
 </head>
 <body>
     <div class="fullscreen-div">
@@ -169,6 +46,7 @@ const navs = $('.navi nav');
     <nav class="about links">
         <a href="#" class="fade-link">About</a>
         <a href="https://peteroper.github.io/portfolio/assets/resume/peterroper_resume20072023.pdf" target="_blank">Resume</a>
+        <a href="#" id="darkModeToggle">Dark Mode</a>
     </nav>
 </div></div>
 
@@ -207,8 +85,8 @@ const navs = $('.navi nav');
                     <p>I highly value product ownership, iteration and testing. Harnessing these collectively allows a team to look at the broader user experience and incrementally refine a products value, design and usability with the overall aim of improving user satisfaction.</p>
                     <p>While feature design captures attention, continuously improving a product can have an equal or greater influence on user satisfaction.</p>
                     <ol>
-                        <li><a href="#">A/B Testing</a></li>
-                        <li><a href="#">Heuristic Evaluation</a></li>
+                        <li><a href="../journal/ab-testing.html">Continously improving with A/B Testing</a></li>
+                        <!--li><a href="../journal/heuristic-evaluation.html">Heuristic Evaluation</a></li-->
                     </ol>
                 </div>
             </div>
@@ -218,14 +96,14 @@ const navs = $('.navi nav');
                     <p>These may vary depending on the project,  however I try to adhere to visual design principles that closely resonate with Steve Krug’s concepts presented in ‘Don’t Make Me Think.’  When crafting UI designs, I prefer to emphasize and advocate for principles such as composition, hierarchy, scanability, and intuitive navigation, all of which are fundamental for creating user-friendly interfaces.</p>
                     <p>For UX design, heuristic laws inform my design decisions when consider screen content and user journeys. Jakob’s, Hick’s and Miller’s law influence my decisions to create simple, concise and easy to understand experiences.</p>
                     <ol>
-                        <li><a href="#">How I helped define design principles for a product</a></li>
+                        <li><a href="../journal/design-principles.html">Defining design principles for a Tsukasapo.</a></li>
                     </ol>
                 </div>
                 <div id="product" class="segment">
                     <h3>Project Awareness</h3>
                     <p>Project requirements vary so It’s crucial to understand the product and service in detail along with knowing it’s context for both its users and business needs. This information then gives you the necessary information to make well informed design decisions.</p>
                     <ol>
-                        <li><a href="#">How I created an automated User flow</a></li>
+                        <li><a href="../journal/userflow-repository.html">Understanding a Product and User flow</a></li>
                     </ol>
                 </div>
             </div>
@@ -466,7 +344,7 @@ const navs = $('.navi nav');
     <!-- body ENDS -->
 
     <div class="navi sticky-element">
-        <a href="index.html" class="back fade-link"><span class="icn material-icons">arrow_back</span></a>
+        <a href="../index.html" class="back"><span class="icn material-icons">arrow_back</span></a>
         <nav class="selected">
             <a href="#intro">About</a>
         </nav>
