--- a/v2/journal/design-principles.html
+++ b/v2/journal/design-principles.html
@@ -214,7 +214,7 @@ for (let i = 0; i < numColumns; i++) {
     <div class="body">
     
     <div id="intro" class="section">
-        <h2>Defining Design Principles for a product</h2>
+        <h2>Defining Design Principles for Tsukasapo</h2>
         <div class="column-container col1">
             <div class="column">
                 <h3>title</h3>
